--- a/index.html
+++ b/index.html
@@ -16,9 +16,24 @@
                 <span class="msg"></span>
             </form>
         </div>
+    </section>
+    <section class="ajax-section">
+        <div class="container">
+            <ul class="cities">
 
+            </ul>
+
+        </div>
 
     </section>
+    <footer class="page-footer">
+        <div class="container">
+            <small>
+                Made with <span>Passion</span> by Tito
+            </small>
+        </div>
+
+    </footer>
 
     <script type="text/javascript" src="script.js"></script>
   
